--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Rubik+Doodle+Shadow&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Genos:ital,wght@0,100..900;1,100..900&display=swap');
 
 .font-lemon{
   font-family: 'Rubik Doodle Shadow', system-ui;
@@ -10,6 +12,13 @@
 }
 .font-dance{
     font-family: 'Dancing Script', cursive;
+}
+.font-pacifico{
+  font-family: "Pacifico", cursive;
+}
+.font-genos{
+  font-family: "Genos", sans-serif;
+  font-optical-sizing: auto;
 }
 
 
@@ -670,10 +679,10 @@ nav.fill ul li a:hover:after {
   /* glass effect */
 
   .glass{
-    background: rgba( 255, 255, 255, 0.2 );
-    box-shadow: 0 1px 5px 0 white;
-    backdrop-filter: blur( 1.5px );
-    -webkit-backdrop-filter: blur( 1.5px );
+    background: rgba( 255, 255, 255, 0.1 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 10px );
+    -webkit-backdrop-filter: blur( 10px );
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
   }
