--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Rubik+Doodle+Shadow&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Genos:ital,wght@0,100..900;1,100..900&display=swap');
 
-.font-lemon{
-  font-family: 'Rubik Doodle Shadow', system-ui;
-}
 .font-lato{
     font-family: 'Lato', sans-serif;
 }
@@ -21,7 +17,9 @@
   font-optical-sizing: auto;
 }
 
-
+*{
+  scroll-behavior: smooth;
+}
 
 /*--------------star animation--------------------*/
 
@@ -741,7 +739,7 @@ nav.fill ul li a:hover:after {
   
 body {
   --sb-track-color: #888888;
-  --sb-thumb-color: #333333;
+  --sb-thumb-color: #0e0e0e;
   --sb-size: 10px;
 
   scrollbar-color: var(--sb-thumb-color) 
